--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <p>Everything here is completly made from scratch. More Styling & Customization with personal touch needed, and I will definetly complete it once I get free time. Else the assignment i.e chips has been completed in the form of Superchat</p>
-<h3>Thank You Raghav & Unzela for such Great Bootcamp, Thank You so much <i class="fa-solid fa-hands-praying"></i></h3>
+<h3>Thank You Raghav & Unzela for such a Great Bootcamp, Thank You so much <i class="fa-solid fa-hands-praying"></i></h3>
 <p></p>
 
     <main class="screen1">
@@ -124,7 +124,7 @@
 
     <main class="screen2">
         <div class="img-sec">
-            <img src="raghav-thumbnail.jpg" alt="">
+            <img src="" alt="Unzela YouTube Header">
         </div>
 
         <div class="live-chat-money">
